--- a/portfolio.html
+++ b/portfolio.html
@@ -118,6 +118,14 @@
                     <div class="mil-center">
                         <p class="mil-text-lg mil-up mil-mb-90">Em nossos projetos utilizamos design e tecnologia <br> para tirar do papel, sonhos.</p>
                     </div>
+                    <!-- right buttons -->
+                    <div class="mil-top-panel-buttons">
+                        <a href="/img/portfolio/portfolio.pdf" class="mil-button mil-sm" download="">Donwload Portfolio</a>
+                        <div class="mil-menu-btn">
+                            <span></span>
+                        </div>
+                    </div>
+                    <!-- right buttons end -->
                     <!-- filter -->
                     <div class="mil-filter mil-up mil-mb-90">
                         <div class="mil-filter-links">
@@ -137,11 +145,11 @@
 
                                 <div class="mil-grid-item social">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
-                                        <img src="img/covers/1.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                        <img src="img/portfolio/exitus.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Modern <br>social</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Post para redes sociais <br>Exitus</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Social Media Design</div>
                                     </a>
@@ -150,11 +158,11 @@
 
                                 <div class="mil-grid-item devweb">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
-                                        <img src="img/covers/2.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                        <img src="img/portfolio/site4.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Modern <br> social</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Site para denúncia contra mulheres  <br> 100 Desculpa para denuciar</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Dev. Web</div>
                                     </a>
@@ -163,11 +171,11 @@
 
                                 <div class="mil-grid-item appweb">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
-                                        <img src="img/covers/3.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                        <img src="img/portfolio/porteiro1.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Sistema de controle <br>de usuário em condomínio</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Aplicações Web</div>
                                     </a>
@@ -176,11 +184,11 @@
 
                                 <div class="mil-grid-item social">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
-                                        <img src="img/covers/4.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                        <img src="img/portfolio/modelese.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Posts para rede sociais <br>Modele-se</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Social Media Design</div>
                                     </a>
@@ -189,11 +197,11 @@
 
                                 <div class="mil-grid-item social">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
-                                        <img src="img/covers/5.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                        <img src="img/portfolio/logos.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Algumas logos <br>elaboradas</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Social Media Design</div>
                                     </a>
@@ -202,11 +210,11 @@
 
                                 <div class="mil-grid-item devweb">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
-                                        <img src="img/covers/6.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                        <img src="img/portfolio/site3.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Insituição de doação <br>Faça mais doação</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Dev. Web</div>
                                     </a>
@@ -215,11 +223,11 @@
 
                                 <div class="mil-grid-item appweb">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
-                                        <img src="img/covers/7.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                        <img src="img/portfolio/site2.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Catálogo <br> venda pelo WhatsApp</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Aplicações Web</div>
                                     </a>
@@ -228,11 +236,11 @@
 
                                 <div class="mil-grid-item devweb">
 
-                                    <a href="project.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
-                                        <img src="img/covers/8.jpg" alt="cover">
+                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                        <img src="img/portfolio/mudas.png" alt="cover">
                                         <div class="mil-project-descr">
-                                            <h3 class="mil-upper mil-mb-30">Confidential <br>Technology</h3>
-                                            <div class="mil-link mil-upper">Start A Project <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
+                                            <h3 class="mil-upper mil-mb-30">Elaboração de site para mudeiro  <br>Elaboração de toda identidade visual</h3>
+                                            <div class="mil-link mil-upper">Solicite orçamento <div class="mil-arrow mil-light"><img src="img/icons/1.svg" alt="arrow"></div></div>
                                         </div>
                                         <div class="mil-category">Dev. Web</div>
                                     </a>
