--- a/services.html
+++ b/services.html
@@ -262,7 +262,7 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-4">
                             <span class="mil-suptitle mil-upper mil-up mil-mb-30">Uma dica</span>
-                            <h2 class="mil-upper mil-up">Se intereçou pelos nossos <span class="mil-marker">Serviços?</span></h2>
+                            <h2 class="mil-upper mil-up">Se interessou pelos nossos <span class="mil-marker">Serviços?</span></h2>
                         </div>
                         <div class="col-lg-4 mil-mt-suptitle-offset">
                             <p class="mil-up">Entre em contato e faça seu orçamento sem compromisso e venha nos conhecer.</p>
