--- a/services.html
+++ b/services.html
@@ -124,7 +124,7 @@
                             <div class="mil-center mil-mb-90">
                                 <span class="mil-suptitle mil-upper mil-up mil-mb-30">Serviços</span>
                                 <h2 class="mil-upper mil-up">O que nós fazemos</h2>
-                                <p class="mil-text-lg mil-up">Nossas atividades incluem o desenvolvimento de sites e aplicações personalizadas, otimização para motores de busca, integração de sistemas, manutenção contínua, suporte técnico, estratégias de marketing online, consultoria em UX/UI, desenvolvimento responsivo, treinamento e segurança da informação.</p>
+                                <p class="mil-text-lg mil-up">Nossas atividades incluem o desenvolvimento de sites e aplicações personalizadas, otimização para motores de busca, integração de sistemas, manutenção contínua, suporte técnico, estratégias de marketing online, gestão de tráfego pago, desenvolvimento responsivo, boas práticas de segurança online.</p>
                             </div>
 
                         </div>
@@ -154,9 +154,9 @@
                                     <div class="mil-icon mil-icon-lg mil-mb-30">
                                         <img src="img/icons/5.svg" alt="icon">
                                     </div>
-                                    <h4 class="mil-upper mil-mb-20">UI/UX Designer</h4>
+                                    <h4 class="mil-upper mil-mb-20">Gestor de Tráfego Pago</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p class="mil-service-text">O profissional UI/UX Designer é responsável por otimizar a experiência do usuário (UX) e a interface do usuário (UI) em produtos digitais. Suas atividades incluem o design de interfaces intuitivas e agradáveis, considerando a jornada do usuário, prototipagem, testes de usabilidade e a criação de elementos visuais que proporcionem uma experiência positiva e eficiente para os usuários. Em suma, o UI/UX Designer busca equilibrar estética e funcionalidade, visando melhorar a interação do usuário com produtos como sites, aplicativos e softwares.</p>
+                                    <p class="mil-service-text">O Gestor de Tráfego Pago otimiza campanhas de marketing digital pagas para maximizar o ROI e atingir objetivos estratégicos. Suas atividades incluem a criação e gestão de campanhas em plataformas como Google Ads e Facebook Ads, segmentação de público-alvo, definição de orçamento, criação de anúncios atrativos e análise de desempenho. Ele realiza testes A/B, ajusta estratégias conforme os resultados e busca novas oportunidades para aumentar visibilidade e conversão, equilibrando custos e resultados para garantir a eficácia das campanhas publicitárias e o crescimento sustentável da empresa.</p>
                                     <div class="mil-go-buton mil-icon mil-icon-lg mil-icon-accent-bg">
                                         <img src="img/icons/1.svg" alt="icon">
                                     </div>
@@ -237,10 +237,12 @@
                         <div class="col-lg-4">
 
                             <div class="div mil-mb-60">
-                                <h3 class="mil-upper mil-up mil-mb-30">Elaboração e criação <br>de conteúdo digital</h3>
+                                <h3 class="mil-upper mil-up mil-mb-30">Elaboração e criação <br>de conteúdo digital e Gestão</h3>
                                 <div class="mil-divider-sm mil-up mil-mb-30"></div>
-                                <p class="mil-shortened mil-up mil-mb-30">Algumas ferramentas que utilizamos na criação de conteúdo digital (Social MediaDesing e UI/UIX).</p>
+                                <p class="mil-shortened mil-up mil-mb-30">Algumas ferramentas que utilizamos na criação de conteúdo digital (Social MediaDesign).</p>
                                 <ul class="mil-icon-list mil-mb-60">
+                                    <li class="mil-up"><img src="img/icons/11.svg" alt="icon">Google Ads</li>
+                                    <li class="mil-up"><img src="img/icons/11.svg" alt="icon">Facebook Ads</li>
                                     <li class="mil-up"><img src="img/icons/11.svg" alt="icon">Adobe Photoshop</li>
                                     <li class="mil-up"><img src="img/icons/11.svg" alt="icon">Adobe Illustrator</li>
                                     <li class="mil-up"><img src="img/icons/11.svg" alt="icon">Figma</li>
@@ -319,7 +321,7 @@
                                 <div class="col-md-6 col-lg-6 col-xl-3">
 
                                     <span class="mil-suptitle mil-light mil-upper mil-up mil-mb-30">Anderson</span>
-                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> UI/UX Designer</p>
+                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> Gestor de Tráfego Pago</p>
 
                                 </div>
                                 <div class="col-md-6 col-lg-6 col-xl-3">
