--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                                 <div class="mil-mb-90">
                                     <span class="mil-suptitle mil-light mil-upper mil-mb-60">Nós somos:</span>
-                                    <h1 class="mil-upper mil-light mil-mb-60">Designers<br><span class="mil-accent">Desenvolvedores</span><br>Sonhadores</h1>
+                                    <h1 class="mil-upper mil-light mil-mb-60">Designers<br><span class="mil-accent">Desenvolvedores</span><br>Gestores de tráfego pago</h1>
                                     <a href="portfolio.html" class="mil-link mil-light mil-upper">Veja nossos projetos <span class="mil-arrow"><img src="img/icons/1.svg" alt="arrow"></span></a>
                                 </div>
 
@@ -163,7 +163,7 @@
                             <div class="mil-mb-90">
                                 <span class="mil-suptitle mil-upper mil-up mil-mb-30">Quem somos</span>
                                 <h2 class="mil-upper mil-up mil-mb-30">Nossas experiências</h2>
-                                <p class="mil-up mil-mb-40">Somos especializados na criação, design de redes socias e site, incluindo manutenção de sites e aplicações web. </p>
+                                <p class="mil-up mil-mb-40">Somos especializados na criação, design de redes socias e site, incluindo manutenção de sites, aplicações web e gestão de tráfego pago. </p>
                                 <a href="project.html" class="mil-link mil-upper mil-up ">Projetos<span class="mil-arrow"><img src="img/icons/2.svg" alt="arrow"></span></a>
                             </div>
 
@@ -202,7 +202,7 @@
                         </div>
                         <div class="col-lg-5 mil-mt-suptitle-offset">
 
-                            <p class="mil-up mil-mb-60">Nossas atividades incluem o desenvolvimento de sites e aplicações personalizadas, otimização para motores de busca, integração de sistemas, manutenção contínua, suporte técnico, estratégias de marketing online, consultoria em UX/UI, desenvolvimento responsivo, treinamento e segurança da informação.</p>
+                            <p class="mil-up mil-mb-60">Nossas atividades incluem o desenvolvimento de sites e aplicações personalizadas, otimização para motores de busca, integração de sistemas, manutenção contínua, suporte técnico, estratégias de marketing online, gestão de tráfego pago, desenvolvimento responsivo, boas práticas de segurança online.</p>
 
                             <div class="row">
                                 <div class="col-sm-4">
@@ -221,7 +221,7 @@
                                         <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
                                             <img src="img/icons/4.svg" alt="icon">
                                         </div>
-                                        <h6 class="mil-upper mil-up">UI/UX Designer</h6>
+                                        <h6 class="mil-upper mil-up">Gestão de Tráfego Pago</h6>
                                     </a>
 
                                 </div>
@@ -284,9 +284,9 @@
                                     <div class="mil-icon mil-icon-lg mil-mb-30">
                                         <img src="img/icons/5.svg" alt="icon">
                                     </div>
-                                    <h4 class="mil-upper mil-mb-20">UI/UX Designer</h4>
+                                    <h4 class="mil-upper mil-mb-20">Gestão de Tráfego Pago</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p class="mil-service-text">O profissional UI/UX Designer é responsável por otimizar a experiência do usuário (UX) e a interface do usuário (UI) em produtos digitais. Suas atividades incluem o design de interfaces intuitivas e agradáveis, considerando a jornada do usuário, prototipagem, testes de usabilidade e a criação de elementos visuais que proporcionem uma experiência positiva e eficiente para os usuários. Em suma, o UI/UX Designer busca equilibrar estética e funcionalidade, visando melhorar a interação do usuário com produtos como sites, aplicativos e softwares.</p>
+                                    <p class="mil-service-text">O Gestor de Tráfego Pago otimiza campanhas de marketing digital pagas para maximizar o ROI e atingir objetivos estratégicos. Suas atividades incluem a criação e gestão de campanhas em plataformas como Google Ads e Facebook Ads, segmentação de público-alvo, definição de orçamento, criação de anúncios atrativos e análise de desempenho. Ele realiza testes A/B, ajusta estratégias conforme os resultados e busca novas oportunidades para aumentar visibilidade e conversão, equilibrando custos e resultados para garantir a eficácia das campanhas publicitárias e o crescimento sustentável da empresa.</p>
                                     <div class="mil-go-buton mil-icon mil-icon-lg mil-icon-accent-bg">
                                         <img src="img/icons/1.svg" alt="icon">
                                     </div>
@@ -361,9 +361,9 @@
                             <a href="project.html" class="mil-portfolio-item mil-long-item mil-up mil-mb-30">
                                 <img src="img/photo/uiux.png" alt="cover">
                                 <div class="mil-project-descr">
-                                    <h4 class="mil-upper mil-mb-20">UI/UX Design</h4>
+                                    <h4 class="mil-upper mil-mb-20">Gestor de Tráfego pago</h4>
                                     <div class="mil-divider-sm mil-mb-20"></div>
-                                    <p>UI/UX é a fusão de design visual e experiência do usuário para criar produtos digitais esteticamente atrativos e altamente usáveis. UI trata da aparência visual e UX concentra-se na facilidade de uso e satisfação.</p>
+                                    <p>O Gestor de Tráfego Pago otimiza campanhas de marketing digital pagas para maximizar o ROI e atingir objetivos estratégicos. Suas atividades incluem a criação e gestão de campanhas em plataformas como Google Ads e Facebook Ads, segmentação de público-alvo, definição de orçamento, criação de anúncios atrativos e análise de desempenho. </p>
                                 </div>
                             </a>
 
@@ -449,7 +449,7 @@
                                 <div class="col-md-6 col-lg-6 col-xl-3">
 
                                     <span class="mil-suptitle mil-light mil-upper mil-up mil-mb-30">Anderson</span>
-                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> UI/UX Designer</p>
+                                    <p class="mil-text-sm mil-up mil-light-soft mil-mb-30">Desenvolvedor Front-end <br> Social Media Design <br> Gestor de Tráfego pago</p>
 
                                 </div>
                                 <div class="col-md-6 col-lg-6 col-xl-3">
