--- a/venda-qualquer-planta.html
+++ b/venda-qualquer-planta.html
@@ -85,17 +85,16 @@
                         </div>
                         <div class="col-lg-7 mil-mt-suptitle-offset">
 
-                            <p class="mil-up " style="font-size: 1.6rem;">Nesse eBook , você vai aprender técnicas de forma
-                                simples os primeiros passos para ser um
-                                dos melhores vendedores de mudas da
-                                sua região, tornar-se um bom vendedor de mudas requer uma
-                                combinação de conhecimento sobre as plantas,
-                                habilidades interpessoais e estratégias de vendas
-                                eficazes.
+                            <p class="mil-up " style="font-size: 1.6rem;">Nesse eBook, você vai aprender técnicas de forma
+                                simples os primeiros passos para ser um dos melhores vendedores de mudas da
+                                sua região, tornar-se um bom vendedor de mudas requer uma combinação de conhecimento sobre as plantas,
+                                habilidades interpessoais e estratégias de vendas eficazes. 
+                                <div class="py-2"><h2>Por apenas R$19,90</h2> <h4> sem juros</h4></div>
                                 </p>
                                 <div class="col-lg-3 mil-mt-suptitle-offset">
                                     <div class="mil-adaptive-right mil-up">
-                                        <a href="" target="_blank" class="mil-button">Comprar Agora! </a>
+                                        
+                                        <a href="https://pay.kirvano.com/ae9a9077-0874-4330-adff-948ed413cd9e" target="_blank" class="mil-button">Comprar agora!</a>
                                     </div>
                                 </div>
 
@@ -132,7 +131,7 @@
                         </div>
                         <div class="col-lg-12">
 
-                            <a href="" class="mil-service-card mil-up ">
+                            <a href="https://pay.kirvano.com/ae9a9077-0874-4330-adff-948ed413cd9e" class="mil-service-card mil-up ">
                                 <div class="mil-center">
                                     <div class="mil-icon mil-icon-lg mil-mb-30">
                                         <img src="img/icons/5.svg" alt="icon">
@@ -142,6 +141,7 @@
                                     <p class="mil-service-text">É um eBook , que traz informações de como ser um bom vendedor de mudas (plantas) e s tornar-se um bom vendedor de mudas requer uma combinação de conhecimento sobre as plantas,
                                         habilidades interpessoais e estratégias de vendas
                                         eficazes.</p>
+                                        <div class="py-2"><h2>Por apenas R$19,90</h2> <h4> sem juros</h4></div>
                                         <br>
                                         <button class="mil-button">Comprar Agora!</button>
                                     
@@ -170,10 +170,11 @@
                         </div>
                         <div class="col-lg-4 mil-mt-suptitle-offset">
                             <p class="mil-up">Adquira já, antes que seja tarde! Descubra os Segredos para Vender Plantas e Transforme seu Negócio!</p>
+                            <div class="py-2"><h3>Por apenas R$19,90</h3> <h4> sem juros</h4></div>
                         </div>
                         <div class="col-lg-3 mil-mt-suptitle-offset">
                             <div class="mil-adaptive-right mil-up">
-                                <a href="" target="_blank" class="mil-button">Adquirir! </a>
+                                <a href="https://pay.kirvano.com/ae9a9077-0874-4330-adff-948ed413cd9e" target="_blank" class="mil-button">Adquirir! </a>
                             </div>
                         </div>
                     </div>
