--- a/metodo-clonagem-zero.html
+++ b/metodo-clonagem-zero.html
@@ -31,7 +31,7 @@
     <!-- t4w css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Como vender qualquer planta</title>
+    <title>Método Clonagem Zero</title>
 
     <style>
         .timer {
