--- a/metodo-clonagem-zero.html
+++ b/metodo-clonagem-zero.html
@@ -281,7 +281,7 @@
                         </div>
                         <div class="col-lg-12">
 
-                            <a href="#" class="mil-service-card mil-up ">
+                            <a href="https://pay.kirvano.com/ae9a9077-0874-4330-adff-948ed413cd9e" class="mil-service-card mil-up ">
                                 <div class="mil-center">
                                     <div class="mil-icon mil-icon-lg mil-mb-30">
                                         <img src="img/icons/5.svg" alt="icon">
@@ -328,7 +328,7 @@
                                 Originalmente, essa mentoria exclusiva é oferecida por R$ 289,00. Mas, por tempo limitado, e como você adquiriu nosso eBook, então pode garantir sua vaga por um preço ainda melhor </p>
                             <div class="py-2"><h3>Por apenas R$97,00</h3> <h4> até 10x sem juros</h4>
                             <p>É uma oportunidade única de obter conhecimentos valiosos e personalizados por uma fração do preço.</p></div>
-                            <a href="https://pay.kirvano.com/ae9a9077-0874-4330-adff-948ed413cd9e" target="_blank" class="mil-button btn-mento">Comprar já! </a>
+                            <a  href="https://www.instagram.com/techforweb/" target="_blank" class="mil-button btn-mento">Adquira já! </a>
                         </div>
                     </div>
                 </div>
