--- a/metodo-clonagem-zero.html
+++ b/metodo-clonagem-zero.html
@@ -169,7 +169,7 @@
                             </div>
                         </div>
                         <div class="col-lg-7 mil-mt-suptitle-offset">
-                            <p class="mil-up  text-center" style="font-size: 1.4rem;">Descubra como proteger seu celular contra clonagem e espionagem
+                            <p class="mil-up  text-center" style="font-size: 1.4rem;">Descubra como proteger seu celular contra clonagem e espionagem.
                                 Em um mundo cada vez mais digital, a segurança do seu celular nunca foi tão importante. 
                                 <br>
                                 Com a crescente ameaça de clonagem de celulares e monitoramento de aplicativos, é crucial estar um passo à frente dos cibercriminosos. Este eBook é seu guia definitivo para identificar e combater essas ameaças, garantindo a segurança dos seus dados pessoais e profissionais. <br> <br>
