--- a/metodo-clonagem-zero.html
+++ b/metodo-clonagem-zero.html
@@ -176,7 +176,7 @@
                                 <!--
                                 <h3>Por apenas R$29,90</h3>
                                 <a href="https://pay.kirvano.com/ae9a9077-0874-4330-adff-948ed413cd9e" target="_blank" class="mil-button" style="font-size: 1.3rem;">Adquira já </a>
-                                <p>em até 10x sem juros</p>
+                                <p>em até 12x</p>
                                 -->
                                 </p>
                          </div>
@@ -296,7 +296,7 @@
                                             <p class="mil-service-text" style="color: #fff;">Não espere até que seja tarde demais. Proteja seu celular e seus dados com as informações valiosas deste eBook. Clique no botão abaixo para adquirir sua cópia e começar a proteger sua vida digital hoje mesmo!</p>
                                         </div>
                                     </div>
-                                        <div class="py-2" ><h2>Por apenas R$29,90</h2> <h4> em até 10x sem juros</h4></div>
+                                        <div class="py-2" ><h2>Por apenas R$29,90</h2> <h4> em até 12x</h4></div>
                                         <br>
                                         <button class="mil-button" style="font-size: 1.1rem;">Comprar Agora!</button>
                                     
@@ -326,7 +326,7 @@
                         <div class="col-lg-6 mil-mt-suptitle-offset">
                             <p class="mil-up">Ao adquirir o nosso eBook "Método Clonagem Zero: O segredo de como proteger o seu WhatsApp", você já deu o primeiro passo para garantir a segurança dos seus dispositivos. Mas que tal ir além e obter uma mentoria personalizada com um especialista em cibersegurança? <br>
                                 Originalmente, essa mentoria exclusiva é oferecida por R$ 289,00. Mas, por tempo limitado, e como você adquiriu nosso eBook, então pode garantir sua vaga por um preço ainda melhor </p>
-                            <div class="py-2"><h3>Por apenas R$97,00</h3> <h4> até 10x sem juros</h4>
+                            <div class="py-2"><h3>Por apenas R$97,00</h3> <h4> até 12x</h4>
                             <p>É uma oportunidade única de obter conhecimentos valiosos e personalizados por uma fração do preço.</p></div>
                             <a  href="https://www.instagram.com/techforweb/" target="_blank" class="mil-button btn-mento">Adquira já! </a>
                         </div>
