--- a/portfolio.html
+++ b/portfolio.html
@@ -120,11 +120,18 @@
                     </div>
                     <!-- right buttons -->
                     <div class="mil-top-panel-buttons">
-                        <a href="/img/portfolio/portfolio.pdf" class="mil-button mil-sm" download="">Donwload Portfolio</a>
+                        <a href="/img/portfolio/portfolio.pdf" class="mil-button mil-sm" download="">Download Portfolio</a> <br>
+                        
                         <div class="mil-menu-btn">
                             <span></span>
                         </div>
+                        
                     </div>
+                    <br>
+                    <div class="row">
+                        <a href="https://drive.google.com/drive/folders/1kkKVJExV-i0w61J6zCJe8kSVXfssSkbf" target="_blank" style="background-color: blue; color:#fff;" class="mil-button mil-sm" >Ver no Drive</a>
+                    </div>
+                    <br>
                     <!-- right buttons end -->
                     <!-- filter -->
                     <div class="mil-filter mil-up mil-mb-90">
