--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 <head>
+    
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,6 +34,16 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
     <title>Tech For Web </title>
+
+         <!-- Google tag (gtag.js) -->
+         <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
+         <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+ 
+         gtag('config', 'G-0E59Q5P9NZ');
+         </script>
 
 </head>
 
