--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,15 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
     <title>Tech For Web </title>
+         <!-- Google tag (gtag.js) -->
+         <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
+         <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+ 
+         gtag('config', 'G-0E59Q5P9NZ');
+         </script>
 
 </head>
 
