--- a/metodo-clonagem-zero.html
+++ b/metodo-clonagem-zero.html
@@ -19,6 +19,15 @@
      <link rel="mask-icon" href="img/fiveicon/safari-pinned-tab.svg" color="#5bbad5">
      <meta name="msapplication-TileColor" content="#da532c">
      <meta name="theme-color" content="#ffffff">
+     <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0E59Q5P9NZ');
+        </script>
      <!-- Meta Pixel Code -->
         <script>
             !function(f,b,e,v,n,t,s)
