--- a/obrigado.html
+++ b/obrigado.html
@@ -31,7 +31,16 @@
     <!-- t4w css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Como vender qualquer planta</title>
+    <title>Obrigado!</title>
+         <!-- Google tag (gtag.js) -->
+         <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
+         <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+ 
+         gtag('config', 'G-0E59Q5P9NZ');
+         </script>
 
     <style>
         body {
