--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <div>
                                 <span class="mil-suptitle mil-upper mil-up mil-mb-30">Tech For Web</span>
                                 <h2 class="mil-upper mil-up mil-mb-40">Transformando ideias em obras de arte</h2>
-                                <a href="about.html" class="mil-link mil-upper mil-up">Saiba mais <span class="mil-arrow"><img src="img/icons/1.svg" alt="arrow"></span></a>
+                                <a href="https://www.instagram.com/techforweb/" target="_blank" class="mil-link mil-upper mil-up">Saiba mais <span class="mil-arrow"><img src="img/icons/1.svg" alt="arrow"></span></a>
                             </div>
 
                         </div>
@@ -428,6 +428,42 @@
                 </div>
             </section>
             <!-- portfolio end -->
+                         <!-- ideas -->
+            <section>
+                <div class="container mil-p-0-90">
+                    <div class="mil-background-grid mil-softened"></div>
+                    <div class="row justify-content-between">
+                        <div class="col-lg-6">
+
+                            <div>
+                                <span class="mil-suptitle mil-upper mil-up mil-mb-30">Evolua o seu negócios</span>
+                                <h2 class="mil-upper mil-up mil-mb-40">Entre em contato com a gente!</h2>
+                                <a href="https://www.instagram.com/techforweb/" target="_blank" class="mil-link mil-upper mil-up">Entrar em contato <span class="mil-arrow"><img src="img/icons/1.svg" alt="arrow"></span></a>
+                            </div>
+
+                        </div>
+                        <div class="col-lg-5 mil-mt-suptitle-offset">
+
+                            <p class="mil-up mil-mb-60">Se você está pronto para levar seu negócio ao próximo nível com estratégias de marketing digital com um desing de impacto e de alta performance, vamos agendar uma conversa para discutir em mais detalhes como podemos ajudar você a alcançar seus objetivos.</p>
+
+                            <div class="row">
+                                <div class="col-sm-4">
+
+                                    <a href="https://wa.me/5514996145415" target="_blank" class="mil-icon-box mil-sm-center mil-mb-30">
+                                        <div class="mil-icon mil-icon-accent-bg mil-up mil-mb-30">
+                                            <img src="img/icons/3.svg" alt="icon">
+                                        </div>
+                                        <h6 class="mil-upper mil-up">Chama no WhatsApp</h6>
+                                    </a>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ideas end -->
 
             <!-- footer -->
             <footer class="mil-relative">
