--- a/contact.html
+++ b/contact.html
@@ -78,14 +78,14 @@
                                     <a href="project.html">Projetos</a>
                                 </li>
                                 <li class="  mil-active">
-                                    <a href="contact.html">Contato</a></li>
+                                    <a href= "https://wa.me/5514996145415" target="_blank">Contato</a></li>
                             </ul>
                         </nav>
                     </div>
 
                     <!-- right buttons -->
                     <div class="mil-top-panel-buttons">
-                        <a href="contact.html" class="mil-button mil-sm">Faça um orçamento</a>
+                        <a href= "https://wa.me/5514996145415" target="_blank" class="mil-button mil-sm">Faça um orçamento</a>
                         <div class="mil-menu-btn">
                             <span></span>
                         </div>
@@ -112,7 +112,7 @@
                             <h1 class="mil-light mil-upper mil-mb-30">Entra em contato com a gente</h1>
                             <ul class="mil-breadcrumbs mil-center">
                                 <li><a href="/">Home</a></li>
-                                <li><a href="contact.html">Contato</a></li>
+                                 
                             </ul>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                                                     <a href="portfolio.html">Prjetos</a>
                                                 </li>
                                                 <li>
-                                                    <a href="contact.html">Contato</a>
+                                                    <a href= "https://wa.me/5514996145415" target="_blank">Contato</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Outros</a>
