--- a/portfolio.html
+++ b/portfolio.html
@@ -69,14 +69,14 @@
                                 <li class=" ">
                                     <a href="project.html">Projetos</a>
                                 </li>
-                                <li><a href="contact.html">Contato</a></li>
+                                 
                             </ul>
                         </nav>
                     </div>
 
                     <!-- right buttons -->
                     <div class="mil-top-panel-buttons">
-                        <a href="contact.html" class="mil-button mil-sm">Faça um orçamento</a>
+                        <a href= "https://wa.me/5514996145415" target="_blank" class="mil-button mil-sm">Faça um orçamento</a>
                         <div class="mil-menu-btn">
                             <span></span>
                         </div>
@@ -152,7 +152,7 @@
 
                                 <div class="mil-grid-item social">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/portfolio/exitus.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Post para redes sociais <br>Exitus</h3>
@@ -165,7 +165,7 @@
 
                                 <div class="mil-grid-item devweb">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/portfolio/site4.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Site para denúncia contra mulheres  <br> 100 Desculpa para denuciar</h3>
@@ -178,7 +178,7 @@
 
                                 <div class="mil-grid-item appweb">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/portfolio/porteiro1.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Sistema de controle <br>de usuário em condomínio</h3>
@@ -191,7 +191,7 @@
 
                                 <div class="mil-grid-item social">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/portfolio/modelese.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Posts para rede sociais <br>Modele-se</h3>
@@ -204,7 +204,7 @@
 
                                 <div class="mil-grid-item social">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/portfolio/logos.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Algumas logos <br>elaboradas</h3>
@@ -217,7 +217,7 @@
 
                                 <div class="mil-grid-item devweb">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/portfolio/site3.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Insituição de doação <br>Faça mais doação</h3>
@@ -230,7 +230,7 @@
 
                                 <div class="mil-grid-item appweb">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-square-item mil-mb-30">
                                         <img src="img/portfolio/site2.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Catálogo <br> venda pelo WhatsApp</h3>
@@ -243,7 +243,7 @@
 
                                 <div class="mil-grid-item devweb">
 
-                                    <a href="contact.html" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
+                                    <a href= "https://wa.me/5514996145415" target="_blank" class="mil-portfolio-item-2 mil-long-item mil-mb-30">
                                         <img src="img/portfolio/mudas.png" alt="cover">
                                         <div class="mil-project-descr">
                                             <h3 class="mil-upper mil-mb-30">Elaboração de site para mudeiro  <br>Elaboração de toda identidade visual</h3>
@@ -286,7 +286,7 @@
                                                     <a href="portfolio.html">Prjetos</a>
                                                 </li>
                                                 <li>
-                                                    <a href="contact.html">Contato</a>
+                                                    <a href= "https://wa.me/5514996145415" target="_blank">Contato</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Outros</a>
