--- a/project.html
+++ b/project.html
@@ -77,14 +77,14 @@
                                 <li class="  mil-active">
                                     <a href="project.html">Projetos</a>
                                 </li>
-                                <li><a href="contact.html">Contato</a></li>
+                                 
                             </ul>
                         </nav>
                     </div>
 
                     <!-- right buttons -->
                     <div class="mil-top-panel-buttons">
-                        <a href="contact.html" class="mil-button mil-sm">Faça um orçamento</a>
+                        <a href= "https://wa.me/5514996145415" target="_blank" class="mil-button mil-sm">Faça um orçamento</a>
                         <div class="mil-menu-btn">
                             <span></span>
                         </div>
@@ -210,7 +210,7 @@
                                                     <a href="portfolio.html">Prjetos</a>
                                                 </li>
                                                 <li>
-                                                    <a href="contact.html">Contato</a>
+                                                    <a href= "https://wa.me/5514996145415" target="_blank">Contato</a>
                                                 </li>
                                                 <li>
                                                     <a href="#">Outros</a>
