--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     <div class="col-6">
 
                                         <div class="mil-counter-frame mil-light mil-mb-30">
-                                            <h4 class="mil-accent mil-thin mil-mb-10"><span class="mil-counter" data-number="120">0</span>+</h4>
+                                            <h4 class="mil-accent mil-thin mil-mb-10">+ de <span class="mil-counter" data-number="120">0</span></h4>
                                             <p class="mil-light">Projetos <br>elaborados</p>
                                         </div>
 
@@ -145,7 +145,7 @@
                                     <div class="col-6">
 
                                         <div class="mil-counter-frame mil-light mil-mb-30">
-                                            <h4 class="mil-accent mil-thin mil-mb-10"><span class="mil-counter" data-number="9">0</span>k+</h4>
+                                            <h4 class="mil-accent mil-thin mil-mb-10">+ de <span class="mil-counter" data-number="9">0</span>k</h4>
                                             <p class="mil-light">Horas <br>Trabalhadas</p>
                                         </div>
 
@@ -153,7 +153,7 @@
                                     <div class="col-6">
 
                                         <div class="mil-counter-frame mil-light mil-mb-30">
-                                            <h4 class="mil-accent mil-thin mil-mb-10"><span class="mil-counter" data-number="4">0</span>+</h4>
+                                            <h4 class="mil-accent mil-thin mil-mb-10">+ de <span class="mil-counter" data-number="4">0</span></h4>
                                             <p class="mil-light">Anos de <br>experiência</p>
                                         </div>
 
@@ -185,7 +185,7 @@
 
                             <div class="mil-mb-90">
                                 <span class="mil-suptitle mil-upper mil-up mil-mb-30">Quem somos</span>
-                                <h2 class="mil-upper mil-up mil-mb-30">Nossas experiências</h2>
+                                <h2 class="mil-upper mil-up mil-mb-30">Veja alguns de nossos Projetos</h2>
                                 <p class="mil-up mil-mb-40">Somos especializados na criação, design de redes socias e site, incluindo manutenção de sites, aplicações web e gestão de tráfego pago. </p>
                                 <a href="project.html" class="mil-link mil-upper mil-up ">Projetos<span class="mil-arrow"><img src="img/icons/2.svg" alt="arrow"></span></a>
                             </div>
@@ -199,7 +199,7 @@
                                 </div>
                                 <div class="mil-about-counter">
                                     <h1 class="mil-counter mil-right mil-mb-10" data-number="4">+ de <p></p></h1>
-                                    <h5 class="mil-upper mil-right"><span class="mil-marker">Anos</span> de <br>experiências e <br>Trabalhos elaborados</h5>
+                                    <h5 class="mil-upper mil-right">Temos mais de <br><span class="mil-marker"> 4 Anos</span> de <br>experiência <br>no mercado.</h5>
                                 </div>
                             </div>
 
@@ -492,7 +492,7 @@
                                                     <a href= "https://wa.me/5514996145415" target="_blank">Contato</a>
                                                 </li>
                                                 <li>
-                                                    <a href="#">Outros</a>
+                                                    
                                                 </li>
                                             </ul>
                                         </nav>
