--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                     <!-- right buttons -->
                     <div class="mil-top-panel-buttons">
-                        <a href= "https://wa.me/5514996145415" target="_blank" class="mil-button mil-sm">Faça um orçamento</a>
+                        <a href= "contato.html" target="_blank" class="mil-button mil-sm">Faça um orçamento</a>
                         <div class="mil-menu-btn">
                             <span></span>
                         </div>
