--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@
     <!-- t4w css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Obrigado!</title>
+    <title>Contato</title>
          <!-- Google tag (gtag.js) -->
          <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
          <script>
