--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
     <!-- t4w css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Tech For Web </title>
+    <title>Tech For Web | Gestão de Tráfego Pago e Social Media </title>
+         <!-- Google tag (gtag.js) -->
+         <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11105409517">
+        </script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-11105409517');
+        </script>
 
          <!-- Google tag (gtag.js) -->
          <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E59Q5P9NZ"></script>
