--- a/project.html
+++ b/project.html
@@ -41,6 +41,16 @@
  
          gtag('config', 'G-0E59Q5P9NZ');
          </script>
+              <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11105409517">
+        </script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-11105409517');
+        </script>
 
 </head>
 
