--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="pt-BR">
 
 <head>
     
@@ -11,6 +11,8 @@
     <meta name="keywords" content="bootstrap 5, Cocial Media, Web Design, Sites" />
     <meta name="author" content="T4W - Tech For Web" />
     <meta property="og:image" content="https://techforweb.vercel.app/img/logo/logo.png" />
+    <meta http-equiv="content-language" content="pt-BR">
+
 
      <!-- Site favicon -->
      <link rel="shortcut icon" href="img/fiveicon/favicon.ico" />
@@ -21,6 +23,15 @@
      <link rel="mask-icon" href="img/fiveicon/safari-pinned-tab.svg" color="#5bbad5">
      <meta name="msapplication-TileColor" content="#da532c">
      <meta name="theme-color" content="#ffffff">
+     <meta name="description" content="Serviços especializados em gestão de tráfego pago e social media para maximizar seus resultados. Consultoria personalizada e estratégias de marketing digital.">
+     <meta name="robots" content="index, follow">
+     <meta property="og:title" content="Gestão de Tráfego Pago e Social Media">
+     <meta property="og:description" content="Maximize seus resultados com nossas estratégias personalizadas de marketing digital.">
+     <meta property="og:image" content="https://www.techforweb.com.br">
+     <meta property="og:url" content="https://www.techforweb.com.br">
+     <meta property="og:type" content="website">
+
+
 
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="css/plugins/bootstrap-grid.css">
